test/expected/explain_fav_v-c++.out
explain void f(int x[*])
                    ^
21: error: variable length arrays not supported in C++
